--- a/public/index.html
+++ b/public/index.html
@@ -479,21 +479,37 @@
         gap: 0.5rem;
       }
 
-      .form-group input {
-        background-color: rgba(255, 255, 255, 0.9);
-        border: 2px solid #e8f5e9;
+      /* 增加權重並設置更明顯的邊框 */
+      .auth-container .form-group input {
+        background-color: #ffffff;
+        border: 2px solid #c8e6c9 !important; /* 使用更明顯的綠色邊框 */
         border-radius: 8px;
-        padding: 0.8rem;
+        padding: 1rem;
         font-size: 1rem;
+        width: 100%;
         transition: all 0.3s ease;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
       }
 
-      .form-group input:focus {
-        border-color: #4caf50;
+      /* 聚焦時的樣式 */
+      .auth-container .form-group input:focus {
+        border-color: #4caf50 !important;
         box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.2);
         outline: none;
-        background-color: #ffffff;
+      }
+
+      /* 增加輸入框的間距 */
+      .auth-container .form-group {
+        margin-bottom: 1.5rem;
+      }
+
+      /* 標籤樣式 */
+      .auth-container .form-group label {
+        display: block;
+        margin-bottom: 0.8rem;
+        color: #2c3e50;
+        font-weight: 600;
+        font-size: 1.1rem;
       }
 
       /* 新增的表單樣式 */
