--- a/public/index.html
+++ b/public/index.html
@@ -201,9 +201,9 @@
         text-align: center;
       }
 
-      /* 用戶名稱樣式 */
+      /* 帳號稱樣式 */
       #username-display {
-        margin-right: auto; /* 將用戶名稱推到左邊 */
+        margin-right: auto; /* 將帳號稱推到左邊 */
       }
 
       .topic-selection-container {
@@ -1344,7 +1344,7 @@
       <div class="auth-form" id="login-form">
         <h2>登入</h2>
         <div class="form-group">
-          <label for="username">用戶名</label>
+          <label for="username">帳號</label>
           <input type="text" id="username" required />
         </div>
         <div class="form-group">
@@ -1361,7 +1361,7 @@
       <div class="auth-form" id="register-form" style="display: none">
         <h2>註冊</h2>
         <div class="form-group">
-          <label for="reg-username">用戶名</label>
+          <label for="reg-username">帳號</label>
           <input type="text" id="reg-username" required />
         </div>
         <div class="form-group">
@@ -1530,7 +1530,7 @@
           document.getElementById("main-container").style.display = "block";
           document.getElementById("user-info").style.display = "block";
 
-          // 設置用戶名稱時同時更新手機版選單
+          // 設置帳號稱時同時更新手機版選單
           const username = localStorage.getItem("username");
           document.getElementById("username-display").textContent = username;
           document.getElementById("mobile-username-display").textContent =
@@ -1602,7 +1602,7 @@
             checkAuth();
           } else {
             console.error("登入失敗:", data);
-            alert(data.message || "登入失敗，請檢查用戶名和密碼");
+            alert(data.message || "登入失敗，請檢查帳號和密碼");
           }
         } catch (error) {
           console.error("登入錯誤:", error);
@@ -2064,7 +2064,7 @@
           document.getElementById("main-container").style.display = "block";
           document.getElementById("user-info").style.display = "block";
 
-          // 設置用戶名稱
+          // 設置帳號稱
           const username = localStorage.getItem("username");
           document.getElementById("username-display").textContent = username;
 
